fix(theme): remove button element force center align on mobile style

--- a/apps/theme/pageBuilder/styles/elements/button.scss
+++ b/apps/theme/pageBuilder/styles/elements/button.scss
@@ -207,6 +207,4 @@
   &--simple {
     @include button-simple();
   }
-  // force center align on mobile
-  margin: 0 auto !important;
 }
